changed titles of caoch suggestions

--- a/fitness/templates/fitness/dashboard.html
+++ b/fitness/templates/fitness/dashboard.html
@@ -300,7 +300,7 @@
         <div class="col-md-6 mb-4">
             <div class="card">
                 <div class="card-header">
-                    <h5 class="mb-0">Coach Suggestions</h5>
+                    <h5 class="mb-0">Coach Suggestions and Workout Plans</h5>
                 </div>
                 <div class="card-body">
                     {% if suggestions %}
