--- a/fitness/templates/fitness/user_profile.html
+++ b/fitness/templates/fitness/user_profile.html
@@ -68,7 +68,7 @@
 
         <div class="card">
             <div class="card-header">
-                <h2>Send Suggestion</h2>
+                <h2>Send Suggestion and Workout Plan</h2>
             </div>
             <div class="card-body">
                 <form method="post">
